--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
             <img class="img-fluid" src="img/portfolio/thumbnails/1.jpg" alt="">
             <div class="portfolio-box-caption">
               <div class="project-category text-white-50">
-                Category
+                LinkedIn
               </div>
               <div class="project-name">
                 Project Name
@@ -242,7 +242,7 @@
   <!-- Footer -->
   <footer class="bg-light py-5">
     <div class="container">
-      <div class="small text-center text-muted">Copyright &copy; 2019 - Start Bootstrap</div>
+      <div class="small text-center text-muted">Copyright &copy; 2019</div>
     </div>
   </footer>
 
