added buttons for linkedin and github

--- a/index.html
+++ b/index.html
@@ -208,10 +208,20 @@
   </section>
 
   <!-- Call to Action Section -->
-  <section class="page-section bg-dark text-white">
-    <div class="container text-center">
-      <h2 class="mb-4">Check Out My Resume</h2>
-      <a class="btn btn-light btn-xl" href="file:///C:/Users/asans/OneDrive/Desktop/Resume.pdf" target="_blank">View Now</a>
+  <section class="page-section bg-dark text-white container wrapper" style="max-width: 100vw;">
+    <div class="row">
+    <div class="container text-center col-sm">
+      <h2 class="mb-4">LinkedIn</h2>
+      <a class="btn btn-light btn-xl" href="https://www.linkedin.com/in/asanschagrin/" target="_blank">View Now</a>
+    </div>
+    <div class="container text-center col-sm">
+      <h2 class="mb-4">GitHub</h2>
+      <a class="btn btn-light btn-xl" href="https://github.com/asanscha" target="_blank">View Now</a>
+    </div>
+    <div class="container text-center col-sm">
+        <h2 class="mb-4">Resume</h2>
+        <a class="btn btn-light btn-xl" href="file:///C:/Users/asans/OneDrive/Desktop/Resume.pdf" target="_blank">View Now</a>
+      </div>
     </div>
   </section>
 
