updated portfolio section text

--- a/index.html
+++ b/index.html
@@ -130,10 +130,10 @@
             <img class="img-fluid" src="img/portfolio/thumbnails/1.jpg" alt="">
             <div class="portfolio-box-caption">
               <div class="project-category text-white-50">
-                LinkedIn
+                GitHub
               </div>
               <div class="project-name">
-                Project Name
+                Animal Gifs
               </div>
             </div>
           </a>
@@ -143,10 +143,10 @@
             <img class="img-fluid" src="img/portfolio/thumbnails/2.jpg" alt="">
             <div class="portfolio-box-caption">
               <div class="project-category text-white-50">
-                Category
+                GitHub
               </div>
               <div class="project-name">
-                Project Name
+                Psychic Game
               </div>
             </div>
           </a>
@@ -156,10 +156,10 @@
             <img class="img-fluid" src="img/portfolio/thumbnails/3.jpg" alt="">
             <div class="portfolio-box-caption">
               <div class="project-category text-white-50">
-                Category
+                GitHub
               </div>
               <div class="project-name">
-                Project Name
+                Crystal Collector
               </div>
             </div>
           </a>
@@ -169,10 +169,10 @@
             <img class="img-fluid" src="img/portfolio/thumbnails/4.jpg" alt="">
             <div class="portfolio-box-caption">
               <div class="project-category text-white-50">
-                Category
+                GitHub
               </div>
               <div class="project-name">
-                Project Name
+                Train Schedules
               </div>
             </div>
           </a>
@@ -182,10 +182,10 @@
             <img class="img-fluid" src="img/portfolio/thumbnails/5.jpg" alt="">
             <div class="portfolio-box-caption">
               <div class="project-category text-white-50">
-                Category
+                GitHub
               </div>
               <div class="project-name">
-                Project Name
+                Coming Soon
               </div>
             </div>
           </a>
@@ -195,10 +195,10 @@
             <img class="img-fluid" src="img/portfolio/thumbnails/6.jpg" alt="">
             <div class="portfolio-box-caption p-3">
               <div class="project-category text-white-50">
-                Category
+                GitHub
               </div>
               <div class="project-name">
-                Project Name
+                Coming Soon
               </div>
             </div>
           </a>
