--- a/index.html
+++ b/index.html
@@ -130,10 +130,10 @@
             <img class="img-fluid" src="img/portfolio/thumbnails/1.jpg" alt="">
             <div class="portfolio-box-caption">
               <div class="project-category text-white-50">
-                GitHub
+                <a href="https://github.com/asanscha/animalGifs">GitHub</a>
               </div>
               <div class="project-name">
-                Animal Gifs
+                <a href="https://asanscha.github.io/animalGifs/">Animal Gifs</a>
               </div>
             </div>
           </a>
@@ -143,10 +143,10 @@
             <img class="img-fluid" src="img/portfolio/thumbnails/2.jpg" alt="">
             <div class="portfolio-box-caption">
               <div class="project-category text-white-50">
-                GitHub
+                <a href="https://github.com/asanscha/Psychic-Game">GitHub</a>
               </div>
               <div class="project-name">
-                Psychic Game
+                <a href="https://asanscha.github.io/Psychic-Game/">Psychic Game</a>
               </div>
             </div>
           </a>
@@ -156,10 +156,10 @@
             <img class="img-fluid" src="img/portfolio/thumbnails/3.jpg" alt="">
             <div class="portfolio-box-caption">
               <div class="project-category text-white-50">
-                GitHub
+                <a href="https://github.com/asanscha/unit-4-game">GitHub</a>
               </div>
               <div class="project-name">
-                Crystal Collector
+                <a href="https://asanscha.github.io/unit-4-game/">Crystal Collector</a>
               </div>
             </div>
           </a>
