modified portfolio to fit 6 projects

--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
 
 <head>
-
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
@@ -22,7 +21,6 @@
 
   <!-- Theme CSS - Includes Bootstrap -->
   <link href="css/creative.min.css" rel="stylesheet">
-
 </head>
 
 <body id="page-top">
@@ -126,46 +124,46 @@
     <div class="container-fluid p-0">
       <div class="row no-gutters">
         <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="img/portfolio/fullsize/1.jpg">
+          <a class="portfolio-box" href="https://asanscha.github.io/animalGifs/" target="_blank">
             <img class="img-fluid" src="img/portfolio/thumbnails/1.jpg" alt="">
             <div class="portfolio-box-caption">
               <div class="project-category text-white-50">
-                <a href="https://github.com/asanscha/animalGifs" target="_blank">GitHub</a>
+                GitHub
               </div>
               <div class="project-name">
-                <a href="https://asanscha.github.io/animalGifs/" target="_blank">Animal Gifs</a>
+                Animal Gifs
               </div>
             </div>
           </a>
         </div>
         <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="img/portfolio/fullsize/2.jpg">
+          <a class="portfolio-box" href="https://asanscha.github.io/Psychic-Game/" target="_blank">
             <img class="img-fluid" src="img/portfolio/thumbnails/2.jpg" alt="">
             <div class="portfolio-box-caption">
               <div class="project-category text-white-50">
-                <a href="https://github.com/asanscha/Psychic-Game" target="_blank">GitHub</a>
+                GitHub
               </div>
               <div class="project-name">
-                <a href="https://asanscha.github.io/Psychic-Game/" target="_blank">Psychic Game</a>
+                Pyschic Game
               </div>
             </div>
           </a>
         </div>
         <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="img/portfolio/fullsize/3.jpg">
+          <a class="portfolio-box" href="https://asanscha.github.io/unit-4-game/" target="_blank">
             <img class="img-fluid" src="img/portfolio/thumbnails/3.jpg" alt="">
             <div class="portfolio-box-caption">
               <div class="project-category text-white-50">
-                <a href="https://github.com/asanscha/unit-4-game" target="_blank">GitHub</a>
+                GitHub
               </div>
               <div class="project-name">
-                <a href="https://asanscha.github.io/unit-4-game/" target="_blank">Crystal Collector</a>
+                Unit 4 Game
               </div>
             </div>
           </a>
         </div>
         <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="img/portfolio/fullsize/4.jpg">
+          <a class="portfolio-box" href="https://github.com" target="_blank">
             <img class="img-fluid" src="img/portfolio/thumbnails/4.jpg" alt="">
             <div class="portfolio-box-caption">
               <div class="project-category text-white-50">
@@ -178,7 +176,7 @@
           </a>
         </div>
         <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="img/portfolio/fullsize/5.jpg">
+          <a class="portfolio-box" href="img/portfolio/fullsize/5.jpg" target="_blank">
             <img class="img-fluid" src="img/portfolio/thumbnails/5.jpg" alt="">
             <div class="portfolio-box-caption">
               <div class="project-category text-white-50">
@@ -191,7 +189,7 @@
           </a>
         </div>
         <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="img/portfolio/fullsize/6.jpg">
+          <a class="portfolio-box" href="img/portfolio/fullsize/6.jpg" target="_blank">
             <img class="img-fluid" src="img/portfolio/thumbnails/6.jpg" alt="">
             <div class="portfolio-box-caption p-3">
               <div class="project-category text-white-50">
@@ -268,5 +266,4 @@
   <script src="js/creative.min.js"></script>
 
 </body>
-
 </html>
