updated some links and added projects

--- a/index.html
+++ b/index.html
@@ -163,40 +163,40 @@
           </a>
         </div>
         <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="https://github.com" target="_blank">
+          <a class="portfolio-box" href="https://github.com/asanscha/LIRI" target="_blank">
             <img class="img-fluid" src="img/portfolio/thumbnails/4.jpg" alt="">
             <div class="portfolio-box-caption">
               <div class="project-category text-white-50">
                 GitHub
               </div>
               <div class="project-name">
-                Train Schedules
+                LIRI Bot
               </div>
             </div>
           </a>
         </div>
         <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="img/portfolio/fullsize/5.jpg" target="_blank">
+          <a class="portfolio-box" href="https://github.com/asanscha/Bamazon" target="_blank">
             <img class="img-fluid" src="img/portfolio/thumbnails/5.jpg" alt="">
             <div class="portfolio-box-caption">
               <div class="project-category text-white-50">
                 GitHub
               </div>
               <div class="project-name">
-                Coming Soon
+                Bamazon - A backend node application
               </div>
             </div>
           </a>
         </div>
         <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="img/portfolio/fullsize/6.jpg" target="_blank">
+          <a class="portfolio-box" href="https://gitfitapp.herokuapp.com/" target="_blank">
             <img class="img-fluid" src="img/portfolio/thumbnails/6.jpg" alt="">
             <div class="portfolio-box-caption p-3">
               <div class="project-category text-white-50">
-                GitHub
+                Live App
               </div>
               <div class="project-name">
-                Coming Soon
+                gitFit
               </div>
             </div>
           </a>
