added screenshots and links

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
       <div class="row no-gutters">
         <div class="col-lg-4 col-sm-6">
           <a class="portfolio-box" href="https://asanscha.github.io/animalGifs/" target="_blank">
-            <img class="img-fluid" src="img/portfolio/thumbnails/1.jpg" alt="">
+            <img class="img-fluid" src="img/portfolio/thumbnails/animalGifs_650x350.jpg" alt="">
             <div class="portfolio-box-caption">
               <div class="project-category text-white-50">
                 GitHub
@@ -138,7 +138,7 @@
         </div>
         <div class="col-lg-4 col-sm-6">
           <a class="portfolio-box" href="https://asanscha.github.io/Psychic-Game/" target="_blank">
-            <img class="img-fluid" src="img/portfolio/thumbnails/2.jpg" alt="">
+            <img class="img-fluid" src="img/portfolio/thumbnails/Guess_650x350.jpg" alt="">
             <div class="portfolio-box-caption">
               <div class="project-category text-white-50">
                 GitHub
@@ -151,20 +151,20 @@
         </div>
         <div class="col-lg-4 col-sm-6">
           <a class="portfolio-box" href="https://asanscha.github.io/unit-4-game/" target="_blank">
-            <img class="img-fluid" src="img/portfolio/thumbnails/3.jpg" alt="">
+            <img class="img-fluid" src="img/portfolio/thumbnails/crystalupdate_650x350.jpg" alt="">
             <div class="portfolio-box-caption">
               <div class="project-category text-white-50">
                 GitHub
               </div>
               <div class="project-name">
-                Unit 4 Game
+                Crystal Collector
               </div>
             </div>
           </a>
         </div>
         <div class="col-lg-4 col-sm-6">
           <a class="portfolio-box" href="https://github.com/asanscha/LIRI" target="_blank">
-            <img class="img-fluid" src="img/portfolio/thumbnails/4.jpg" alt="">
+            <img class="img-fluid" src="img/portfolio/thumbnails/LIRI_650x350.jpg" alt="">
             <div class="portfolio-box-caption">
               <div class="project-category text-white-50">
                 GitHub
@@ -177,7 +177,7 @@
         </div>
         <div class="col-lg-4 col-sm-6">
           <a class="portfolio-box" href="https://github.com/asanscha/Bamazon" target="_blank">
-            <img class="img-fluid" src="img/portfolio/thumbnails/5.jpg" alt="">
+            <img class="img-fluid" src="img/portfolio/thumbnails/Bamazon_650x350.jpg" alt="">
             <div class="portfolio-box-caption">
               <div class="project-category text-white-50">
                 GitHub
@@ -190,7 +190,7 @@
         </div>
         <div class="col-lg-4 col-sm-6">
           <a class="portfolio-box" href="https://gitfitapp.herokuapp.com/" target="_blank">
-            <img class="img-fluid" src="img/portfolio/thumbnails/6.jpg" alt="">
+            <img class="img-fluid" src="img/portfolio/thumbnails/gitFit_650x350.jpg" alt="">
             <div class="portfolio-box-caption p-3">
               <div class="project-category text-white-50">
                 Live App
