updated resume and removed phone number

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700" rel="stylesheet">
-  <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic'
+    rel='stylesheet' type='text/css'>
 
   <!-- Plugin CSS -->
   <link href="vendor/magnific-popup/magnific-popup.css" rel="stylesheet">
@@ -29,7 +30,9 @@
   <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
     <div class="container">
       <a class="navbar-brand js-scroll-trigger" href="#page-top">Alex Sanschagrin</a>
-      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
+        data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
+        aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
@@ -60,7 +63,8 @@
           <hr class="divider my-4">
         </div>
         <div class="col-lg-8 align-self-baseline">
-          <p class="text-white-75 font-weight-light mb-5">San Diego based web developer focused on creating user-friendly expierences</p>
+          <p class="text-white-75 font-weight-light mb-5">San Diego based web developer focused on creating
+            user-friendly expierences</p>
           <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Explore</a>
         </div>
       </div>
@@ -74,7 +78,8 @@
         <div class="col-lg-8 text-center">
           <h2 class="text-white mt-0">I've got what you need!</h2>
           <hr class="divider light my-4">
-          <p class="text-white-50 mb-4">I enjoy meaningful work that helps others. My background in Quality and biotech conditioned me to be detail-oriented and careful with my coding and development. </p>
+          <p class="text-white-50 mb-4">I enjoy meaningful work that helps others. My background in Quality and biotech
+            conditioned me to be detail-oriented and careful with my coding and development. </p>
           <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Let's Get Started!</a>
         </div>
       </div>
@@ -87,35 +92,29 @@
       <h2 class="text-center mt-0">At Your Service</h2>
       <hr class="divider my-4">
       <div class="row">
-        <div class="col-lg-3 col-md-6 text-center">
+        <div class="col-lg-4 col-md-6 text-center">
           <div class="mt-5">
             <i class="fas fa-4x fa-gem text-primary mb-4"></i>
             <h3 class="h4 mb-2">Quality Work</h3>
             <p class="text-muted mb-0">An eye for detail makes all the difference</p>
           </div>
         </div>
-        <div class="col-lg-3 col-md-6 text-center">
+        <div class="col-lg-4 col-md-6 text-center">
           <div class="mt-5">
             <i class="fas fa-4x fa-laptop-code text-primary mb-4"></i>
             <h3 class="h4 mb-2">Up to Date</h3>
             <p class="text-muted mb-0">Always reviewing current technologies and trends</p>
           </div>
         </div>
-        <div class="col-lg-3 col-md-6 text-center">
+        <div class="col-lg-4 col-md-6 text-center">
           <div class="mt-5">
             <i class="fas fa-4x fa-globe text-primary mb-4"></i>
             <h3 class="h4 mb-2">Ready to Collaborate</h3>
             <p class="text-muted mb-0">Team work gets more done</p>
           </div>
         </div>
-        <div class="col-lg-3 col-md-6 text-center">
-          <div class="mt-5">
-            <i class="fas fa-4x fa-heart text-primary mb-4"></i>
-            <h3 class="h4 mb-2">Made with Love</h3>
-            <p class="text-muted mb-0">Is it really helpful and real if it's not made with love?</p>
-          </div>
-        </div>
       </div>
+    </div>
     </div>
   </section>
 
@@ -208,17 +207,18 @@
   <!-- Call to Action Section -->
   <section class="page-section bg-dark text-white container wrapper" style="max-width: 100vw;">
     <div class="row">
-    <div class="container text-center col-sm">
-      <h2 class="mb-4">LinkedIn</h2>
-      <a class="btn btn-light btn-xl" href="https://www.linkedin.com/in/asanschagrin/" target="_blank">View Now</a>
-    </div>
-    <div class="container text-center col-sm">
-      <h2 class="mb-4">GitHub</h2>
-      <a class="btn btn-light btn-xl" href="https://github.com/asanscha" target="_blank">View Now</a>
-    </div>
-    <div class="container text-center col-sm">
+      <div class="container text-center col-sm">
+        <h2 class="mb-4">LinkedIn</h2>
+        <a class="btn btn-light btn-xl" href="https://www.linkedin.com/in/asanschagrin/" target="_blank">View Now</a>
+      </div>
+      <div class="container text-center col-sm">
+        <h2 class="mb-4">GitHub</h2>
+        <a class="btn btn-light btn-xl" href="https://github.com/asanscha" target="_blank">View Now</a>
+      </div>
+      <div class="container text-center col-sm">
         <h2 class="mb-4">Resume</h2>
-        <a class="btn btn-light btn-xl" href="file:///C:/Users/asans/OneDrive/Desktop/Resume.pdf" target="_blank">View Now</a>
+        <a class="btn btn-light btn-xl" href="C:\Users\asans\Desktop\SanschagrinAlexResume.pdf" target="_blank">View
+          Now</a>
       </div>
     </div>
   </section>
@@ -230,15 +230,11 @@
         <div class="col-lg-8 text-center">
           <h2 class="mt-0">Let's Get In Touch!</h2>
           <hr class="divider my-4">
-          <p class="text-muted mb-5">Ready to start your next project with us? Give us a call or send us an email and we will get back to you as soon as possible!</p>
+          <p class="text-muted mb-5">Ready to start your next project with us? Give us a call or send us an email and we
+            will get back to you as soon as possible!</p>
         </div>
       </div>
-      <div class="row">
-        <div class="col-lg-4 ml-auto text-center mb-5 mb-lg-0">
-          <i class="fas fa-phone fa-3x mb-3 text-muted"></i>
-          <div>+1 (760) 555-5555</div>
-        </div>
-        <div class="col-lg-4 mr-auto text-center">
+        <div class="mr-auto text-center">
           <i class="fas fa-envelope fa-3x mb-3 text-muted"></i>
           <!-- Make sure to change the email address in anchor text AND the link below! -->
           <a class="d-block" href="mailto:asanschagrin@outlook.com">asanschagrin@outlook.com</a>
@@ -250,7 +246,7 @@
   <!-- Footer -->
   <footer class="bg-light py-5">
     <div class="container">
-      <div class="small text-center text-muted">Copyright &copy; 2019</div>
+      <div class="small text-center text-muted">Copyright &copy; 2020</div>
     </div>
   </footer>
 
@@ -266,4 +262,5 @@
   <script src="js/creative.min.js"></script>
 
 </body>
+
 </html>
